--- a/package.json
+++ b/package.json
@@ -1,5 +1,17 @@
 {
-    "name"    : "calcool",
-    "version" : "0.1.0",
-    "main"    : "main.js"
+    "name"    : "calcapp",
+    "version" : "1.0.0",
+    "description": "",
+    "main"    : "main.js",
+    "dependencies": {
+        "pretty-bytes": "^2.0.1"
+      },
+      "devDependencies": {
+        "electron-prebuilt": "^0.35.2"
+      },
+      "scripts": {
+        "start": "electron main.js"
+      },
+      "author": "Weerayut Chalaruk",
+      "license": "ISC"
   }
